--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon server.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
