--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.257.0",
+    "@aws-sdk/s3-request-presigner": "^3.257.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.0.1"
+    "mysql2": "^3.0.1",
+    "sharp": "^0.31.3"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -20,5 +23,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "type": "module"
 }
